--- a/src/index.css
+++ b/src/index.css
@@ -35,7 +35,7 @@ button {
   font-size: 1em;
   font-weight: 100;
   font-family: inherit;
-  background-color: #1a1a1a;
+  background-color: #000000;
   cursor: pointer;
   transition: border-color 0.25s;
 }
